@@ -6,7 +6,8 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
-- Made the translations more consistent regarding the User ID.
+- More work on the classical profile.
+- Made the language translations more consistent regarding the User ID.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
